# AEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  create_build_dir.bat
AEditor/: imgui.ini
AEditor/src/: AEditor.cpp  AEditor.hpp  Main.cpp  Utils.cpp  Utils.hpp
AEditor/src/Core/: FileCreator.cpp  FileCreator.hpp  Project.cpp  Project.hpp
AEditor/src/Menus/: CreateProjectMenu.cpp  CreateProjectMenu.hpp  EditorMenu.cpp  EditorMenu.hpp  Menu.cpp  Menu.hpp
AEditor/src/Panels/: AssetsPanel.cpp  AssetsPanel.hpp  InspectorPanel.cpp  InspectorPanel.hpp  Panel.cpp  Panel.hpp  SceneHierachyPanel.hpp  SceneHierarchyPanel.cpp
AEngine/glsl/: default_f.glsl  default_v.glsl  uitext_f.glsl  uitext_v.glsl
AEngine/include/: AE_API.hpp  AEngine.hpp
AEngine/include/AEngine/: File.hpp  Time.hpp
AEngine/src/: File.cpp  Time.cpp
AEngine/src/Application/: Application.cpp  CustomFileDialog.cpp  FileDialogFilter.cpp  FileDialogs.cpp  Window.cpp
AEngine/src/Exception/: Exception.cpp  InitializationException.cpp  OpenGLException.cpp  ShaderException.cpp
AEngine/src/Graphics/: FontFamily.cpp  FontManager.cpp  OrthographicCamera.cpp  Renderer2D.cpp  Renderer2DStatic.cpp  RendererStat.cpp  ShaderProgram.cpp  TextRenderer.cpp  Texture2D.cpp  Viewport.cpp
AEngine/src/Input/: EventSystem.cpp  Input.cpp  Keyboard.cpp  Mouse.cpp
AEngine/src/Scene/: Component.cpp  Entity.cpp  Scene.cpp  (+1 more)
CMake/: AEditor.cmake  AEngine.cmake  Glad.cmake  ImGui.cmake  Libs.cmake  TargetArch.cmake  TestApp.cmake
Libs/imgui/: imgui.h
TestApp/src/: TestApp.cpp
(+55 files in other folders)
